erDiagram
    USERS {
        int UserID PK
        string FullName
        string Email UK
        string PasswordHash
        string Role
        datetime DateJoined
    }

    ORGANISERDETAILS {
        int OrganiserID PK
        string ClubName
        string PhoneNumber
        string Bio
    }

    EVENTS {
        int EventID PK
        int OrganiserID FK
        string EventName
        string Description
        datetime EventDate
        string Location
        int IsActive
    }

    CATEGORIES {
        int CategoryID PK
        int EventID FK
        string CategoryName
        int MaxParticipants
        float EntryFee
    }

    ENROLMENTS {
        int EnrolmentID PK
        int ParticipantID FK
        int CategoryID FK
        datetime EnrolmentDate
    }

    RESULTS {
        int ResultID PK
        int EnrolmentID FK
        string FinishTime
        int Position
        string Status
    }

    USERS ||--o| ORGANISERDETAILS : "has details"
    USERS ||--o{ EVENTS : "creates"
    EVENTS ||--o{ CATEGORIES : "has"
    CATEGORIES ||--o{ ENROLMENTS : "has"
    USERS ||--o{ ENROLMENTS : "enrols in"
    ENROLMENTS ||--o| RESULTS : "has"
